# nextjs-wasm

./: .editorconfig  .gitpod.yml  README.md  devcontainer.Dockerfile  devcontainer.docker-compose.yml  next.config.js  package-lock.json  package.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: types.d.ts
src/components/: WASMExample.tsx
src/components/examples/: NativeCanvasExample.tsx  WASMCanvasExample.tsx  WASMOffscreenCanvasExample.tsx
src/context/: WASM.tsx  WASMWorker.tsx
src/pages/: _app.tsx  index.tsx
src/styles/: Home.module.css
src/utils/: feature-detection.ts  random.ts
src/workers/: wasmWorker.ts
src/workers/wasm/: types.ts  worker.ts
wasm/: Cargo.toml  rs-build.sh  rs-test.sh
wasm/src/: lib.rs
workers/: wasmWorker.ts
