[package]
name = "wasm"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
"wasm-bindgen" = "0.2.80"

[dependencies.web-sys]
version = "0.3.57"
features = [
  "CanvasRenderingContext2d",
  "ImageData",
]
